# IntegrationSystem

./: CMakeLists.txt  IntegrationClient.cpp  IntegrationClient2.cpp  IntegrationServer.cpp  README.md  calculator.cpp  calculator.h  calculator2.cpp  calculator2.h
